wonder.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(a) {
        return a.filter(x=>!x.big)
      },
      peg$c1 = ";",
      peg$c2 = peg$literalExpectation(";", false),
      peg$c3 = function(a) {
        return a
      },
      peg$c4 = /^[ \n]/,
      peg$c5 = peg$classExpectation([" ", "\n"], false, false),
      peg$c6 = "#.",
      peg$c7 = peg$literalExpectation("#.", false),
      peg$c8 = /^[^\n]/,
      peg$c9 = peg$classExpectation(["\n"], true, false),
      peg$c10 = function() {return''},
      peg$c11 = "\"",
      peg$c12 = peg$literalExpectation("\"", false),
      peg$c13 = "#",
      peg$c14 = peg$literalExpectation("#", false),
      peg$c15 = /^[^"\\]/,
      peg$c16 = peg$classExpectation(["\"", "\\"], true, false),
      peg$c17 = "\\",
      peg$c18 = peg$literalExpectation("\\", false),
      peg$c19 = peg$anyExpectation(),
      peg$c20 = function(a) {
        return{
          type:'istr',
          body:a.reduce((x,y)=>x.concat(y.map?[y[1]]:y.replace(/\\\\/g,'\\')),[])
        }
      },
      peg$c21 = "`",
      peg$c22 = peg$literalExpectation("`", false),
      peg$c23 = /^[^`\\]/,
      peg$c24 = peg$classExpectation(["`", "\\"], true, false),
      peg$c25 = /^[a-zA-Z]/,
      peg$c26 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c27 = function(a, b) {
        return{
          type:'app',
          body:{
            type:'app',
            body:{type:'fn',body:'R'},
            f:{
              type:'istr',
              body:a.reduce((x,y)=>x.concat(y.map?[y[1]]:y.replace(/\\\\/g,'\\')),[])
            }
          },
          f:{
            type:'str',
            body:b.join``
          }
        }
      },
      peg$c28 = "_",
      peg$c29 = peg$literalExpectation("_", false),
      peg$c30 = /^[0-9]/,
      peg$c31 = peg$classExpectation([["0", "9"]], false, false),
      peg$c32 = ".",
      peg$c33 = peg$literalExpectation(".", false),
      peg$c34 = "e",
      peg$c35 = peg$literalExpectation("e", false),
      peg$c36 = "oo",
      peg$c37 = peg$literalExpectation("oo", false),
      peg$c38 = function(a) {
        var f
        return{
          type:'num',
          body:a!='oo'?a.replace(/_/g,'-'):a!='_oo'?'Infinity':'-Infinity'
        }
      },
      peg$c39 = "0b",
      peg$c40 = peg$literalExpectation("0b", false),
      peg$c41 = /^[01]/,
      peg$c42 = peg$classExpectation(["0", "1"], false, false),
      peg$c43 = function(a) {
        var f
        return{
          type:'num',
          body:a.replace(/_/g,'-')
        }
      },
      peg$c44 = "0o",
      peg$c45 = peg$literalExpectation("0o", false),
      peg$c46 = /^[0-8]/,
      peg$c47 = peg$classExpectation([["0", "8"]], false, false),
      peg$c48 = "0x",
      peg$c49 = peg$literalExpectation("0x", false),
      peg$c50 = /^[0-9A-Fa-f]/,
      peg$c51 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c52 = /^[TF]/,
      peg$c53 = peg$classExpectation(["T", "F"], false, false),
      peg$c54 = function(a) {
        return{
          type:'bool',
          body:+(a=='T')
        }
      },
      peg$c55 = "[",
      peg$c56 = peg$literalExpectation("[", false),
      peg$c57 = "..",
      peg$c58 = peg$literalExpectation("..", false),
      peg$c59 = "]",
      peg$c60 = peg$literalExpectation("]", false),
      peg$c61 = function(a) {
        return a.reduce((x,y)=>y[1].big?x:{
        	type:'app',
          body:{
         	  type:'app',
            body:{type:'fn',body:'++'},
            f:x
          },
          f:y[0]?y[1]:{type:'ls',body:[y[1]]}
        },{type:'ls',body:[]})
      },
      peg$c62 = "{",
      peg$c63 = peg$literalExpectation("{", false),
      peg$c64 = "}",
      peg$c65 = peg$literalExpectation("}", false),
      peg$c66 = function(a) {
        var o={}
        return{
          type:'obj',
          body:(a.map(x=>o[x[0].body]=x[4]),o)
        }
      },
      peg$c67 = ".{",
      peg$c68 = peg$literalExpectation(".{", false),
      peg$c69 = "?",
      peg$c70 = peg$literalExpectation("?", false),
      peg$c71 = function(a, b) {
        return{
          type:'pm',
          body:(
            a.map(x=>[x[0],x[4],x[2]=='?'])
          ),
          f:b||{type:'bool',body:0}
        }
      },
      peg$c72 = function(a, b, c) {
        return{
        	type:'pmv',
          body:a.body,
          f:b=='..'?null:b,
          g:c
        }
      },
      peg$c73 = "(",
      peg$c74 = peg$literalExpectation("(", false),
      peg$c75 = ")",
      peg$c76 = peg$literalExpectation(")", false),
      peg$c77 = function(a) {
        return{
          type:'a',
          body:+a[2].join``
        }
      },
      peg$c78 = function(a) {
        return{
          type:'ref',
          body:a[2]
        }
      },
      peg$c79 = /^[^ \n;0-9".[\]\\(){}@#TF?`]/,
      peg$c80 = peg$classExpectation([" ", "\n", ";", ["0", "9"], "\"", ".", "[", "]", "\\", "(", ")", "{", "}", "@", "#", "T", "F", "?", "`"], true, false),
      peg$c81 = function(a) {
        return{
          type:'fn',
          body:a.join``
        }
      },
      peg$c82 = function(a, b) {
        return{
          type:'app',
          body:a.pop?a[1]:a,
          f:b
        }
      },
      peg$c83 = function(a, b) {
        return{
          type:'app',
          body:a,
          f:b
        }
      },
      peg$c84 = "'",
      peg$c85 = peg$literalExpectation("'", false),
      peg$c86 = function(a) {
        return{
          type:'fn',
          body:a.body
        }
      },
      peg$c87 = "^",
      peg$c88 = peg$literalExpectation("^", false),
      peg$c89 = function(a) {
        return{
          type:'fn',
          body:a.body,
          rev:1
        }
      },
      peg$c90 = "^'",
      peg$c91 = peg$literalExpectation("^'", false),
      peg$c92 = "'^",
      peg$c93 = peg$literalExpectation("'^", false),
      peg$c94 = function(a, b) {
        return{
          type:'app',
          body:{type:'fn',body:'ss'},
          f:{
            type:'ls',
            body:[a,...b.map(x=>x[2])]
          }
        }
      },
      peg$c95 = "@",
      peg$c96 = peg$literalExpectation("@", false),
      peg$c97 = function(b) {
        return{
          type:'def',
          body:b
        }
      },
      peg$c98 = function(a, b) {
        return{
          type:'var',
          body:a,
          f:b
        }
      },
      peg$c99 = function(a, b, c) {
        return{
        	type:'cond',
          body:a,
          f:b&&b.length?b.filter(x=>!x.big):{type:'bool',body:1},
          g:c&&c.length?c.filter(x=>!x.big):{type:'bool',body:0}
        }
      },
      peg$c100 = function(a, b) {
        return{
          type:'ev',
          body:a.filter(x=>!x.big),
          f:b.body,
          g:b.f
        }
      },
      peg$c101 = "\\\\",
      peg$c102 = peg$literalExpectation("\\\\", false),
      peg$c103 = function(a, b) {
        return{
          type:'def',
          body:{
            type:'ev',
            body:[].concat(b),
            f:a,
            g:{
              type:'a',
              body:0
            }
          }
        }
      },
      peg$c104 = function(a, b, c) {
        return b.reduce((x,y,z,w)=>(w={
        	type:'lsc',
          body:x,
          f:y[0],
          g:z?{type:'bool',body:1}:c||{type:'bool',body:1}
        },z?{
        	type:'app',
          body:{type:'fn',body:'flat'},
          f:w
        }:w),a)
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsecom();
    if (s2 === peg$FAILED) {
      s2 = peg$parseexpr();
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsecom();
      if (s2 === peg$FAILED) {
        s2 = peg$parseexpr();
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseexpr() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 === peg$FAILED) {
      s1 = peg$parsetype();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 59) {
        s2 = peg$c1;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parse_() {
    var s0;

    if (peg$c4.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }

    return s0;
  }

  function peg$parsetype() {
    var s0;

    s0 = peg$parsestr();
    if (s0 === peg$FAILED) {
      s0 = peg$parsergx();
      if (s0 === peg$FAILED) {
        s0 = peg$parsebin();
        if (s0 === peg$FAILED) {
          s0 = peg$parseoct();
          if (s0 === peg$FAILED) {
            s0 = peg$parsehex();
            if (s0 === peg$FAILED) {
              s0 = peg$parsenum();
              if (s0 === peg$FAILED) {
                s0 = peg$parsebool();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsecond();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parselsc();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsels();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseev();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parseobj();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parsepm();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parsedefn();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parsepmv();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parsevar();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parsecomp();
                                    if (s0 === peg$FAILED) {
                                      s0 = peg$parseaapp();
                                      if (s0 === peg$FAILED) {
                                        s0 = peg$parseapp();
                                        if (s0 === peg$FAILED) {
                                          s0 = peg$parsepm();
                                          if (s0 === peg$FAILED) {
                                            s0 = peg$parsedef();
                                            if (s0 === peg$FAILED) {
                                              s0 = peg$parsearg();
                                              if (s0 === peg$FAILED) {
                                                s0 = peg$parseutfn();
                                                if (s0 === peg$FAILED) {
                                                  s0 = peg$parseufn();
                                                  if (s0 === peg$FAILED) {
                                                    s0 = peg$parsetfn();
                                                    if (s0 === peg$FAILED) {
                                                      s0 = peg$parsefn();
                                                      if (s0 === peg$FAILED) {
                                                        s0 = peg$parsea();
                                                        if (s0 === peg$FAILED) {
                                                          s0 = peg$parseref();
                                                        }
                                                      }
                                                    }
                                                  }
                                                }
                                              }
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parsecom() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      if (peg$c8.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$c8.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c10();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestr() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 34) {
      s1 = peg$c11;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s4 = peg$c13;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsearg();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = peg$currPos;
        if (peg$c15.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s4 === peg$FAILED) {
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 92) {
            s5 = peg$c17;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c18); }
          }
          if (s5 !== peg$FAILED) {
            if (input.length > peg$currPos) {
              s6 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c19); }
            }
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s4 !== peg$FAILED) {
          s3 = input.substring(s3, peg$currPos);
        } else {
          s3 = s4;
        }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 35) {
          s4 = peg$c13;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsearg();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = peg$currPos;
          if (peg$c15.test(input.charAt(peg$currPos))) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s4 === peg$FAILED) {
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 92) {
              s5 = peg$c17;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c18); }
            }
            if (s5 !== peg$FAILED) {
              if (input.length > peg$currPos) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c19); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s4 !== peg$FAILED) {
            s3 = input.substring(s3, peg$currPos);
          } else {
            s3 = s4;
          }
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 34) {
          s3 = peg$c11;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c20(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsergx() {
    var s0, s1, s2, s3, s4, s5, s6;
